Fixed the text scaling to much onto the side of the picture

--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,7 @@ svg {
         grid-template-areas:
         'svg text';
         width: 80vw;
+        grid-template-columns: 1fr 1fr;
     }
 
     .CategoryContainer {
@@ -133,6 +134,7 @@ svg {
         grid-template-areas:
         'svg text';
         width: calc(100vw - (100vw - 100%));
+        grid-template-columns: 1fr 1fr;
 
     }
 
